# axiom

./: .commitlintrc.json  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml  jest.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: deploy-staging.yml  pr-checks.yml
backend/: tsconfig.json
backend/db/: migrate.py  migrate.ts  seed.py  seed.ts
backend/db/docker/: init.sql
backend/db/migrations/: 001_initial_schema.sql  002_traces_epic3_columns.sql  003_cleanup_stale_model_pricing.sql  004_add_engagement_fields.sql
backend/db/seeds/: 001_knowledge_sources.sql  002_model_pricing.sql
backend/src/adapters/: exceptions.py  github.py
backend/src/authorizer/: handler.py
backend/src/chat/: errors.py  handler.py
backend/src/db/: client.py  client.ts  seed.ts
backend/src/engagement/: db.py  handler.py  models.py
backend/src/knowledge/: cache.py  invalidate.py
backend/src/shared/: db.py
backend/src/turn/: __init__.py  bedrock.py  context.py  handler.py  state.py  (+1 more)
backend/tests/: conftest.py
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: client.ts.html  index.html  seed.ts.html
frontend/: README.md
infra/: README.md
infra/client-template/: backend.tf  main.tf  variables.tf  versions.tf
infra/production/: backend.tf  main.tf  outputs.tf  variables.tf
infra/staging/: .terraform.lock.hcl  backend.tf  ci_roles.tf  main.tf  origin_lock.tf  outputs.tf  variables.tf
scripts/: deploy-staging.sh
(+27 files in other folders)
